GalleryActivity - now u can select a photo (but nothing more lol)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="board_view">board view</string>
     <string name="camera_view">camera view</string>
     <string name="load_image">load image</string>
+    <string name="choose_photo">Choose Photo</string>
 </resources>
